syntax = "proto3";
package jotunheim.vmap;


message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}
message GetPathRequest {
    Vector3 origin = 1;
    Vector3 destination = 2;
    string map = 3;
}
message GetPathResponse {
    repeated Vector3 points = 1;
    bool success = 2;
}

enum CollisionChannel {
    ECC_WorldStatic = 0;
	ECC_WorldDynamic = 1;
	ECC_Pawn = 2;
	ECC_Visibility = 3;
	ECC_Camera = 4;
	ECC_PhysicsBody = 5;
	ECC_Vehicle = 6;
	ECC_Destructible = 7;

	reserved 8 to 13;

	ECC_GameTraceChannel1 = 14;
	ECC_GameTraceChannel2 = 15;
	ECC_GameTraceChannel3 = 16;
	ECC_GameTraceChannel4 = 17;
	ECC_GameTraceChannel5 = 18;
	ECC_GameTraceChannel6 = 19;
	ECC_GameTraceChannel7 = 20;
	ECC_GameTraceChannel8 = 21;
	ECC_GameTraceChannel9 = 22;
	ECC_GameTraceChannel10 = 23;
	ECC_GameTraceChannel11 = 24;
	ECC_GameTraceChannel12 = 25;
	ECC_GameTraceChannel13 = 26;
	ECC_GameTraceChannel14 = 27;
	ECC_GameTraceChannel15 = 28;
	ECC_GameTraceChannel16 = 29;
	ECC_GameTraceChannel17 = 30;
	ECC_GameTraceChannel18 = 40;
}
message CheckLOSRequest {
    string map = 1;
    Vector3 start = 2;
    Vector3 end = 3;
    CollisionChannel channel = 4;
}

message CheckLOSResponse {
    bool hit = 1;
    float distance = 2;
    Vector3 position = 3;
}
service VmapService {
    rpc GetPath (GetPathRequest) returns (GetPathResponse);
    rpc CheckLOS (CheckLOSRequest) returns (CheckLOSResponse);
}